tested with more test photos. no s3mini photos have gps location

--- a/aerolyzer/config/image_restriction_conf.yaml
+++ b/aerolyzer/config/image_restriction_conf.yaml
@@ -14,6 +14,8 @@ acceptedMobileDevices:
  - iPhone 5s
  - iPhone 6
  - iPhone 6s
+ - DROIDX
+ - SM-G730V
 
 imgMaxSizeNumber: 4000000
 imgWidthMin: 100
